Added list with edition and removing
